Cleanup code for post Java 8 compile (#157)
Signed-off-by: John Eberhard <jeber@us.ibm.com>