@@ -253,7 +253,7 @@ public class DDMMultipleFormat extends Testcase
           field1 += " ";
         }
         records_[i].setField(0, field1);
-        records_[i].setField(1, new Integer(i));
+        records_[i].setField(1, Integer.valueOf(i));
         records_[i].setField(2, new BigDecimal(String.valueOf(i) + "." + String.valueOf(i)));
       }
       f2.write(records_);
@@ -1209,15 +1209,15 @@ public class DDMMultipleFormat extends Testcase
            Vector<Integer> v = new Vector<Integer>(locks.length);
            for (int i = 0; i < locks.length; i++)
            {
-             v.addElement(new Integer(locks[i]));
+             v.addElement(Integer.valueOf(locks[i]));
            }
            assertCondition(locks.length == 6 &&
-                  v.contains(new Integer(AS400File.READ_EXCLUSIVE_LOCK)) &&
-                  v.contains(new Integer(AS400File.READ_ALLOW_SHARED_READ_LOCK)) &&
-                  v.contains(new Integer(AS400File.READ_ALLOW_SHARED_WRITE_LOCK)) &&
-                  v.contains(new Integer(AS400File.WRITE_EXCLUSIVE_LOCK)) &&
-                  v.contains(new Integer(AS400File.WRITE_ALLOW_SHARED_READ_LOCK)) &&
-                  v.contains(new Integer(AS400File.WRITE_ALLOW_SHARED_WRITE_LOCK)));
+                  v.contains(Integer.valueOf(AS400File.READ_EXCLUSIVE_LOCK)) &&
+                  v.contains(Integer.valueOf(AS400File.READ_ALLOW_SHARED_READ_LOCK)) &&
+                  v.contains(Integer.valueOf(AS400File.READ_ALLOW_SHARED_WRITE_LOCK)) &&
+                  v.contains(Integer.valueOf(AS400File.WRITE_EXCLUSIVE_LOCK)) &&
+                  v.contains(Integer.valueOf(AS400File.WRITE_ALLOW_SHARED_READ_LOCK)) &&
+                  v.contains(Integer.valueOf(AS400File.WRITE_ALLOW_SHARED_WRITE_LOCK)));
          }
          else
          {
