@@ -752,7 +752,7 @@ updateObject() - Update a SMALLINT.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", new Short ((short) 243), getSQLType(Types.SMALLINT));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", Short.valueOf((short) 243), getSQLType(Types.SMALLINT));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -779,7 +779,7 @@ updateObject() - Update a SMALLINT, when the integer is too big.
         try {
             JDRSTest.position (rs_, key_);
             expectedColumn = rs_.findColumn ("C_SMALLINT");
-            JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", new Integer (4873423), getSQLType(Types.SMALLINT));
+            JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", Integer.valueOf(4873423), getSQLType(Types.SMALLINT));
             rs_.updateRow ();
             failed ("Didn't throw SQLException");
         }
@@ -811,7 +811,7 @@ This should work.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", new Float (243.6f), getSQLType(Types.SMALLINT));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_SMALLINT", Float.valueOf(243.6f), getSQLType(Types.SMALLINT));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -856,7 +856,7 @@ updateObject() - Update an INTEGER.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", new Integer (-122833), getSQLType(Types.INTEGER));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", Integer.valueOf(-122833), getSQLType(Types.INTEGER));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -883,7 +883,7 @@ updateObject() - Update an INTEGER, when the integer is too big.
         try {
           JDRSTest.position (rs_, key_);
           expectedColumn = rs_.findColumn ("C_INTEGER");
-          JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", new Long (245545147483647L), getSQLType(Types.INTEGER));
+          JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", Long.valueOf(245545147483647L), getSQLType(Types.INTEGER));
           rs_.updateRow ();
           failed ("Didn't throw SQLException");
         }
@@ -916,7 +916,7 @@ should work.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", new Float (-122833.6f), getSQLType(Types.INTEGER));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_INTEGER", Float.valueOf(-122833.6f), getSQLType(Types.INTEGER));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -961,7 +961,7 @@ updateObject() - Update a REAL.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_REAL", new Float (31.53), getSQLType(Types.REAL));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_REAL", Float.valueOf(31.53f), getSQLType(Types.REAL));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -1006,7 +1006,7 @@ updateObject() - Update a FLOAT.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_FLOAT", new Float (-9845.32), getSQLType(Types.FLOAT));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_FLOAT", Float.valueOf(-9845.32f), getSQLType(Types.FLOAT));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -1050,7 +1050,7 @@ updateObject() - Update a DOUBLE.
         if (checkJdbc42 ()) {
             try {
                 JDRSTest.position (rs_, key_);
-                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_DOUBLE", new Double (19845.987987), getSQLType(Types.DOUBLE));
+                JDReflectionUtil.callMethod_V(rs_,"updateObject","C_DOUBLE", Double.valueOf(19845.987987), getSQLType(Types.DOUBLE));
                 rs_.updateRow ();
                 ResultSet rs2 = statement2_.executeQuery (select_);
                 JDRSTest.position (rs2, key_);
@@ -2139,7 +2139,7 @@ updateObject() - Update a BIGINT.
             if (checkBigintSupport()) {
                 try {
                     JDRSTest.position (rs_, key_);
-                    JDReflectionUtil.callMethod_V(rs_,"updateObject","C_BIGINT", new Integer (223833), getSQLType(Types.BIGINT));
+                    JDReflectionUtil.callMethod_V(rs_,"updateObject","C_BIGINT", Integer.valueOf(223833), getSQLType(Types.BIGINT));
                     rs_.updateRow ();
                     ResultSet rs2 = statement2_.executeQuery (select_);
                     JDRSTest.position (rs2, key_);
@@ -2260,12 +2260,12 @@ updateObject() - Update an BIGINT, when the integer is too big.
 								     + " (C_KEY, C_CHAR_50, C_VARCHAR_50  ) " +
 								     " VALUES (?, ?, ?)");
 			ps.setString(1, "PROP_CHAR_BOOL1");
-			ps.setObject(2, new Boolean(true), Types.BOOLEAN);
-			ps.setObject(3, new Boolean(true), Types.BOOLEAN);
+			ps.setObject(2, Boolean.valueOf(true), Types.BOOLEAN);
+			ps.setObject(3, Boolean.valueOf(true), Types.BOOLEAN);
 			ps.executeUpdate();
 			ps.setString(1, "PROP_CHAR_BOOL2");
-			ps.setObject(2, new Boolean(false), Types.BOOLEAN);
-			ps.setObject(3, new Boolean(false), Types.BOOLEAN);
+			ps.setObject(2, Boolean.valueOf(false), Types.BOOLEAN);
+			ps.setObject(3, Boolean.valueOf(false), Types.BOOLEAN);
 			ps.executeUpdate();
 
 			ps.close();
@@ -2276,8 +2276,8 @@ updateObject() - Update an BIGINT, when the integer is too big.
 
 			while (rs.next()) {
 
-			    JDReflectionUtil.callMethod_V(rs,"updateObject","C_CHAR_50", new Boolean(true), getSQLType(Types.CHAR));
-			    JDReflectionUtil.callMethod_V(rs,"updateObject","C_VARCHAR_50", new Boolean(true), getSQLType(Types.VARCHAR));
+			    JDReflectionUtil.callMethod_V(rs,"updateObject","C_CHAR_50", Boolean.valueOf(true), getSQLType(Types.CHAR));
+			    JDReflectionUtil.callMethod_V(rs,"updateObject","C_VARCHAR_50", Boolean.valueOf(true), getSQLType(Types.VARCHAR));
 			    rs.updateRow();
 			    conn.commit();
 			    String retVal = rs.getString("C_CHAR_50").trim();
@@ -2347,7 +2347,7 @@ updateObject() - Update an BIGINT, when the integer is too big.
 		  argClasses[1] = Class.forName("java.lang.Object"); 
 		  argClasses[2] = Class.forName("java.sql.SQLType"); 
 		  Object[] args = new Object[3]; 
-		  args[0] = new Integer(1); 
+		  args[0] = Integer.valueOf(1); 
 		  args[1] = value; 
 		  args[2] = getSQLType(Types.OTHER); 
 		  JDReflectionUtil.callMethod_V(rs,"updateObject",argClasses, args );
@@ -2442,19 +2442,19 @@ updateObject() - Update an BIGINT, when the integer is too big.
     public void Var118 () { dfpTest(JDRSTest.RSTEST_DFP16, new BigDecimal("1.1E0"), "1.1");}
 
 
-    public void Var119 () { dfpTest(JDRSTest.RSTEST_DFP16, new Float(4533.43f), "4533.43"); }
-    public void Var120 () { dfpTest(JDRSTest.RSTEST_DFP16, new Float(Float.NaN), "NaN");} 
-    public void Var121 () { dfpTest(JDRSTest.RSTEST_DFP16, new Float(Float.POSITIVE_INFINITY), "Infinity");}
-    public void Var122 () { dfpTest(JDRSTest.RSTEST_DFP16, new Float(Float.NEGATIVE_INFINITY), "-Infinity");}
+    public void Var119 () { dfpTest(JDRSTest.RSTEST_DFP16, Float.valueOf(4533.43f), "4533.43"); }
+    public void Var120 () { dfpTest(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.NaN), "NaN");} 
+    public void Var121 () { dfpTest(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.POSITIVE_INFINITY), "Infinity");}
+    public void Var122 () { dfpTest(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.NEGATIVE_INFINITY), "-Infinity");}
     public void Var123 () {
 	    /* with the new native PASE support, this comes back with the zeros*/
-	    dfpTest(JDRSTest.RSTEST_DFP16, new Float(-1234567890123456.0), "-1.23456795E+15", "-1234567950000000");
+	    dfpTest(JDRSTest.RSTEST_DFP16, Float.valueOf(-1234567890123456.0f), "-1.23456795E+15", "-1234567950000000");
     }
-    public void Var124 () { dfpTest(JDRSTest.RSTEST_DFP16, new Double(4533.43f), "4533.43017578125"); }
-    public void Var125 () { dfpTest(JDRSTest.RSTEST_DFP16, new Double(Double.NaN), "NaN");} 
-    public void Var126 () { dfpTest(JDRSTest.RSTEST_DFP16, new Double(Double.POSITIVE_INFINITY), "Infinity");}
-    public void Var127 () { dfpTest(JDRSTest.RSTEST_DFP16, new Double(Double.NEGATIVE_INFINITY), "-Infinity");}
-    public void Var128 () { dfpTest(JDRSTest.RSTEST_DFP16, new Double(-1234567890123456.0), "-1234567890123456");}
+    public void Var124 () { dfpTest(JDRSTest.RSTEST_DFP16, Double.valueOf(4533.43f), "4533.43017578125"); }
+    public void Var125 () { dfpTest(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.NaN), "NaN");} 
+    public void Var126 () { dfpTest(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.POSITIVE_INFINITY), "Infinity");}
+    public void Var127 () { dfpTest(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.NEGATIVE_INFINITY), "-Infinity");}
+    public void Var128 () { dfpTest(JDRSTest.RSTEST_DFP16, Double.valueOf(-1234567890123456.0), "-1234567890123456");}
 
 
 
@@ -2821,7 +2821,7 @@ updateObject() - Update a NUMERIC, with scale greater the value's scale.
 		 argClasses[1] = Class.forName("java.lang.Object"); 
 		 argClasses[2] = Class.forName("java.sql.SQLType"); 
 		 Object[] args = new Object[3]; 
-		 args[0] = new Integer(1); 
+		 args[0] = Integer.valueOf(1); 
 		 args[1] = value; 
 		 args[2] = getSQLType(Types.OTHER); 
 		 JDReflectionUtil.callMethod_V(rs,"updateObject",argClasses, args );
@@ -2899,19 +2899,19 @@ updateObject() - Update a NUMERIC, with scale greater the value's scale.
     public void Var166 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new BigDecimal("1.1E0"), "1,1");}
 
 
-    public void Var167 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Float(4533.43f), "4533,43"); }
-    public void Var168 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Float(Float.NaN), "NaN");} 
-    public void Var169 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Float(Float.POSITIVE_INFINITY), "Infinity");}
-    public void Var170 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Float(Float.NEGATIVE_INFINITY), "-Infinity");}
+    public void Var167 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Float.valueOf(4533.43f), "4533,43"); }
+    public void Var168 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.NaN), "NaN");} 
+    public void Var169 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.POSITIVE_INFINITY), "Infinity");}
+    public void Var170 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Float.valueOf(Float.NEGATIVE_INFINITY), "-Infinity");}
     public void Var171 () {
 	    /* with the new native PASE support, this comes back with the zeros*/
-	    dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Float(-1234567890123456.0), "-1,23456795E+15", "-1234567950000000");
+	    dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Float.valueOf(-1234567890123456.0f), "-1,23456795E+15", "-1234567950000000");
     }
-    public void Var172 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Double(4533.43f), "4533,43017578125"); }
-    public void Var173 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Double(Double.NaN), "NaN");} 
-    public void Var174 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Double(Double.POSITIVE_INFINITY), "Infinity");}
-    public void Var175 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Double(Double.NEGATIVE_INFINITY), "-Infinity");}
-    public void Var176 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, new Double(-1234567890123456.0), "-1234567890123456");}
+    public void Var172 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Double.valueOf(4533.43f), "4533,43017578125"); }
+    public void Var173 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.NaN), "NaN");} 
+    public void Var174 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.POSITIVE_INFINITY), "Infinity");}
+    public void Var175 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Double.valueOf(Double.NEGATIVE_INFINITY), "-Infinity");}
+    public void Var176 () { dfpTestCommaSeparator(JDRSTest.RSTEST_DFP16, Double.valueOf(-1234567890123456.0), "-1234567890123456");}
 
 
 
@@ -2936,8 +2936,8 @@ updateBooleanObject() - Update a BOOLEAN.
     }
   }
 
-      public void Var177() { updateBooleanObject(new Boolean(true),"1",Types.BOOLEAN); } 
-      public void Var178() { updateBooleanObject(new Boolean(false),"0",Types.BOOLEAN); } 
+      public void Var177() { updateBooleanObject(Boolean.valueOf(true),"1",Types.BOOLEAN); } 
+      public void Var178() { updateBooleanObject(Boolean.valueOf(false),"0",Types.BOOLEAN); } 
       public void Var179() {updateBooleanObject("1", "1",Types.VARCHAR); }
       public void Var180() {updateBooleanObject("0", "0",Types.VARCHAR); }
       public void Var181() { updateBooleanObject("1000", "1",Types.VARCHAR);}
@@ -2969,14 +2969,14 @@ updateBooleanObject() - Update a BOOLEAN.
   public void Var188() {
     updateBooleanObject("no", "0",Types.VARCHAR);
   }
-      public void Var189() { updateBooleanObject(new Integer(1),"1",Types.INTEGER); } 
-      public void Var190() { updateBooleanObject(new Integer(0),"0",Types.INTEGER); } 
-      public void Var191() { updateBooleanObject(new Long(1),"1",Types.BIGINT); } 
-      public void Var192() { updateBooleanObject(new Long(0),"0",Types.BIGINT); } 
-      public void Var193() { updateBooleanObject(new Float(3.0),"1",Types.FLOAT); } 
-      public void Var194() { updateBooleanObject(new Float(0.0),"0",Types.FLOAT); } 
-      public void Var195() { updateBooleanObject(new Double(2.0),"1",Types.DOUBLE); } 
-      public void Var196() { updateBooleanObject(new Double(0.0),"0",Types.DOUBLE); } 
+      public void Var189() { updateBooleanObject(Integer.valueOf(1),"1",Types.INTEGER); } 
+      public void Var190() { updateBooleanObject(Integer.valueOf(0),"0",Types.INTEGER); } 
+      public void Var191() { updateBooleanObject(Long.valueOf(1),"1",Types.BIGINT); } 
+      public void Var192() { updateBooleanObject(Long.valueOf(0),"0",Types.BIGINT); } 
+      public void Var193() { updateBooleanObject(Float.valueOf(3.0f),"1",Types.FLOAT); } 
+      public void Var194() { updateBooleanObject(Float.valueOf(0.0f),"0",Types.FLOAT); } 
+      public void Var195() { updateBooleanObject(Double.valueOf(2.0),"1",Types.DOUBLE); } 
+      public void Var196() { updateBooleanObject(Double.valueOf(0.0),"0",Types.DOUBLE); } 
       public void Var197() { updateBooleanObject(new BigDecimal(3.14),"1",Types.DECIMAL); } 
       public void Var198() { updateBooleanObject(new BigDecimal(0.0),"0",Types.DECIMAL); } 
 
